feat(Chapter-III): added tsyringe
