# src/routes/categories.routes.ts
@@ -1,8 +1,9 @@
 import { Router } from 'express';
 import multer from 'multer';
-import createCategoryController from '../modules/cars/useCases/createCategory';
-import { listCategoryController } from '../modules/cars/useCases/listCategory';
-import { importCategoryController } from '../modules/cars/useCases/importCategory';
+
+import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController';
+import { ListCategoriesController } from '../modules/cars/useCases/listCategory/ListCategoriesController';
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController';
 
 const categoriesRoutes = Router();
 
@@ -10,17 +11,14 @@ const upload = multer({
   dest: "./tmp"
 })
 
-categoriesRoutes.post("/", (request, response) => {
-  console.log("reload funcionandoaaa");
-  return createCategoryController().handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const listCategoryController = new ListCategoriesController();
+const importCategoryController = new ImportCategoryController();
 
-categoriesRoutes.get("/", (request, response) => {  
-  return listCategoryController.handle(request, response);
-});
+categoriesRoutes.post("/", createCategoryController.handle);
 
-categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-  return importCategoryController.handle(request, response);
-});
+categoriesRoutes.get("/", listCategoryController.handle);
+
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle);
 
 export { categoriesRoutes };
